--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,6 +50,8 @@
 
         {# Custom page specific scripts loaded below #}
         {% block page_scripts %}{% endblock %}
+             {# App global JS #}
+        <link rel="text/javascript" href="{{ asset('/js/script.js') }}"/>
     </body>
 </html>
 
